--- a/public/styles.css
+++ b/public/styles.css
@@ -4,34 +4,30 @@
   box-sizing: border-box;
 }
 
-html {
-  font-family: "Montserrat", sans-serif;
-}
-
 body {
   background: #eee;
   padding: 0 16px;
+  font-family: "Montserrat", sans-serif;
   background-image: url("https://www.transparenttextures.com/patterns/cubes.png");
 }
 
-#root > div {
+.container {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   grid-template-rows: auto auto auto auto;
   grid-gap: 1.3em;
 }
 
-header {
+.header {
   background-color: #f7f7f7;
   margin: auto -16px;
   padding: 16px 32px;
   box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.3);
-
   grid-row: 1 / 2;
   grid-column: 1 / -1;
 }
 
-header h1 {
+.header-title {
   font-family: "Comic Sans MS", cursive;
   font-weight: 200;
   font-size: 2rem;
@@ -43,12 +39,9 @@ header h1 {
   width: max-content;
 }
 
-.create-note {
+.create-note-form {
   grid-row: 2;
   grid-column: 1 / -1;
-}
-
-form.create-note {
   position: relative;
   width: 40%;
   margin: 0 auto;
@@ -59,8 +52,8 @@ form.create-note {
   box-shadow: 0 1px 5px rgb(138, 137, 137);
 }
 
-form.create-note input,
-form.create-note textarea {
+.input-title,
+.input-content {
   width: 100%;
   border: none;
   padding: 4px;
@@ -70,7 +63,7 @@ form.create-note textarea {
   resize: none;
 }
 
-form.create-note button {
+form.create-note-form button {
   position: absolute;
   right: 18px;
   bottom: -18px;
@@ -94,27 +87,31 @@ form.create-note button {
   box-shadow: 0 2px 5px #ccc;
   padding: 10px;
   width: 100%;
-  margin: 16px 0;
+  margin: 16px 0 0;
 }
 
-.note h1 {
+.note-title {
   font-size: 1.1em;
   margin-bottom: 6px;
+  font-weight: 600;
 }
 
-.note p {
+.note-content {
   font-size: 1.1em;
   margin-bottom: 10px;
 }
 
-.note button {
-  color: #f5ba13;
+.btn-delete {
+  color: #333;
+  background-color: transparent;
   align-self: flex-end;
   border: none;
-  width: 36px;
-  height: 36px;
   cursor: pointer;
   outline: none;
+}
+
+.btn-delete:hover {
+  opacity: 0.7;
 }
 
 footer {
