--- a/public/styles.css
+++ b/public/styles.css
@@ -4,6 +4,11 @@
   box-sizing: border-box;
 }
 
+@font-face {
+  font-family: myComic;
+  src: url(comic-webfont.woff);
+}
+
 body {
   background: #eee;
   padding: 0 16px;
@@ -28,7 +33,7 @@ body {
 }
 
 .header-title {
-  font-family: "Comic Sans MS", cursive;
+  font-family: myComic;
   font-weight: 200;
   font-size: 2rem;
   background: #feefc3;
@@ -61,6 +66,10 @@ body {
   font-size: 1.2em;
   font-family: inherit;
   resize: none;
+}
+
+input:required {
+  box-shadow: none;
 }
 
 form.create-note-form button {
